--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -34,4 +34,4 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
    install:
-   - requirements: requirements.txt
+   - requirements: docs/requirements.txt
